[package]
name = "ngrok-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version ="1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
url = "2.2.2"

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
