[package]
name = "ngrok-api"
version = "0.12.0"
edition = "2021"
license = "MIT"
description = "ngrok API client library for Rust"
homepage = "https://ngrok.com/docs/api"
repository = "https://github.com/ngrok/ngrok-api-rs"

[dependencies]
futures = "0.3.21"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version ="1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
url = "2.2.2"

[dev-dependencies]
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
